// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Transforms log width preTip 🐖🐖🐖🐖🐖🐖🐖🐖🐖 1`] = `
"const a = 1;
const b = 2;
const e = {
  w: {
    c: '123'
  }
};
console.log(\\"line of 9 \\\\uD83D\\\\uDC16\\\\uD83D\\\\uDC16\\\\uD83D\\\\uDC16\\\\uD83D\\\\uDC16\\\\uD83D\\\\uDC16\\\\uD83D\\\\uDC16\\\\uD83D\\\\uDC16\\\\uD83D\\\\uDC16\\\\uD83D\\\\uDC16:\\\\n\\", '1', \\"\\\\n\\", false, \\"\\\\n\\", 2, \\"\\\\n\\", null, \\"\\\\n\\", undefined, \\"\\\\n\\", \\"a =\\", a, \\"\\\\n\\", \\"e.w.c =\\", e.w.c, \\"\\\\n\\", \\"b =\\", b, \\"\\\\n\\", \\"e =\\", e, \\"\\\\n\\") /*@@babel-plugin-enhance-logSkip*/;"
`;

exports[`Transforms log1 1`] = `
"const a = 1,
  b = true;
console.log(\\"line of 3 \\\\uD83D\\\\uDE80\\\\uD83D\\\\uDE80\\\\uD83D\\\\uDE80\\\\uD83D\\\\uDE80\\\\uD83D\\\\uDE80\\\\uD83D\\\\uDE80\\\\uD83D\\\\uDE80\\\\uD83D\\\\uDE80\\\\uD83D\\\\uDE80\\\\uD83D\\\\uDE80:\\\\n\\", \\"a =\\", a, \\"\\\\n\\", \\"b =\\", b, \\"\\\\n\\") /*@@babel-plugin-enhance-logSkip*/;"
`;

exports[`Transforms log2 1`] = `
"const a = 1;
const b = 2;
const e = {
  w: {
    c: '123'
  }
};
console.log(\\"line of 9 \\\\uD83D\\\\uDE80\\\\uD83D\\\\uDE80\\\\uD83D\\\\uDE80\\\\uD83D\\\\uDE80\\\\uD83D\\\\uDE80\\\\uD83D\\\\uDE80\\\\uD83D\\\\uDE80\\\\uD83D\\\\uDE80\\\\uD83D\\\\uDE80\\\\uD83D\\\\uDE80:\\\\n\\", '1', \\"\\\\n\\", false, \\"\\\\n\\", 2, \\"\\\\n\\", null, \\"\\\\n\\", undefined, \\"\\\\n\\", \\"a =\\", a, \\"\\\\n\\", \\"e.w.c =\\", e.w.c, \\"\\\\n\\", \\"b =\\", b, \\"\\\\n\\") /*@@babel-plugin-enhance-logSkip*/;"
`;
